[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iDynamicsPackagesModules"
version = "0.1.0"
description = "iDynamics project with different packages and inside modules"
authors = [
  { name="Ming Chen", email="mingc4@student.unimelb.edu.au" }
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["iDynamicsPackagesModules*"]
